# s1

./: .gitignore  Makefile  README.md  pyproject.toml  test_endpoint.py
examples/: storage_backend_config.py
scratch_test/: minio_test.py  url_test.py
src/: main.py
src/services/: __init__.py  get_bucket_location.py  get_object.py  list_objects.py  select_object_content.py  storage.py
tests/: test_minio_integration.py
